[metadata]
name = rottnest 
description = "Rottnest Python Backend"
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/alan-robertson/rottnest_py


[options]
zip_safe = False
include_package_data = True
package_dir =
    = src
packages = find_namespace:
python_requires = ~=3.8

install_requires =
    bottle
    gevent
    gevent-websocket
    cabaliser

[options.packages.find]
where = src

[options.extras_require]
dev =
    pytest~=6.2
